--- a/src/components/TodoTextInput/style.css
+++ b/src/components/TodoTextInput/style.css
@@ -1,4 +1,4 @@
-.new,
+.fresh,
 .edit {
   position: relative;
   margin: 0;
@@ -17,7 +17,7 @@
   font-smoothing: antialiased;
 }
 
-.new {
+.fresh {
   padding: 16px 16px 16px 60px;
   border: none;
   background: rgba(0, 0, 0, 0.003);
