Refactored generic css class names

--- a/src/components/TodoItem/style.css
+++ b/src/components/TodoItem/style.css
@@ -1,4 +1,4 @@
-.normal .toggle {
+.TodoItem .toggle {
   text-align: center;
   width: 40px;
   /* auto, since non-WebKit browsers doesn't support input styling */
@@ -12,15 +12,15 @@
   appearance: none;
 }
 
-.normal .toggle:after {
+.TodoItem .toggle:after {
   content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#ededed" stroke-width="3"/></svg>');
 }
 
-.normal .toggle:checked:after {
+.TodoItem .toggle:checked:after {
   content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#bddad5" stroke-width="3"/><path fill="#5dc2af" d="M72 25L42 71 27 56l-4 4 20 20 34-52z"/></svg>');
 }
 
-.normal label {
+.TodoItem label {
   white-space: pre-line;
   word-break: break-all;
   padding: 15px 60px 15px 15px;
@@ -30,7 +30,7 @@
   transition: color 0.4s;
 }
 
-.normal .destroy {
+.TodoItem .destroy {
   display: none;
   position: absolute;
   top: 0;
@@ -45,26 +45,26 @@
   transition: color 0.2s ease-out;
 }
 
-.normal .destroy:hover {
+.TodoItem .destroy:hover {
   color: #af5b5e;
 }
 
-.normal .destroy:after {
+.TodoItem .destroy:after {
   content: '×';
 }
 
-.normal:hover .destroy {
+.TodoItem:hover .destroy {
   display: block;
 }
 
-.normal .edit {
+.TodoItem .edit {
   display: none;
 }
 
 .editing {
   border-bottom: none;
   padding: 0;
-  composes: normal;
+  composes: TodoItem;
 }
 
 .editing:last-child {
@@ -94,10 +94,10 @@
 */
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
-  .normal .toggle {
+  .TodoItem .toggle {
     background: none;
   }
-  .normal .toggle {
+  .TodoItem .toggle {
     height: 40px;
   }
 }
