--- a/src/components/TodoList/style.css
+++ b/src/components/TodoList/style.css
@@ -4,39 +4,39 @@
   border-top: 1px solid #e6e6e6;
 }
 
-.normal {
+.TodoList {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.normal li {
+.TodoList li {
   position: relative;
   font-size: 24px;
   border-bottom: 1px solid #ededed;
 }
 
-.normal li:last-child {
+.TodoList li:last-child {
   border-bottom: none;
 }
 
-.normal li.editing {
+.TodoList li.editing {
   border-bottom: none;
   padding: 0;
 }
 
-.normal li.editing .edit {
+.TodoList li.editing .edit {
   display: block;
   width: 506px;
   padding: 13px 17px 12px 17px;
   margin: 0 0 0 43px;
 }
 
-.normal li.editing .view {
+.TodoList li.editing .view {
   display: none;
 }
 
-.normal li .toggle {
+.TodoList li .toggle {
   text-align: center;
   width: 40px;
   /* auto, since non-WebKit browsers doesn't support input styling */
@@ -50,15 +50,15 @@
   appearance: none;
 }
 
-.normal li .toggle:after {
+.TodoList li .toggle:after {
   content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#ededed" stroke-width="3"/></svg>');
 }
 
-.normal li .toggle:checked:after {
+.TodoList li .toggle:checked:after {
   content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#bddad5" stroke-width="3"/><path fill="#5dc2af" d="M72 25L42 71 27 56l-4 4 20 20 34-52z"/></svg>');
 }
 
-.normal li label {
+.TodoList li label {
   white-space: pre-line;
   word-break: break-all;
   padding: 15px 60px 15px 15px;
@@ -68,12 +68,12 @@
   transition: color 0.4s;
 }
 
-.normal li.completed label {
+.TodoList li.completed label {
   color: #d9d9d9;
   text-decoration: line-through;
 }
 
-.normal li .destroy {
+.TodoList li .destroy {
   display: none;
   position: absolute;
   top: 0;
@@ -88,23 +88,23 @@
   transition: color 0.2s ease-out;
 }
 
-.normal li .destroy:hover {
+.TodoList li .destroy:hover {
   color: #af5b5e;
 }
 
-.normal li .destroy:after {
+.TodoList li .destroy:after {
   content: '×';
 }
 
-.normal li:hover .destroy {
+.TodoList li:hover .destroy {
   display: block;
 }
 
-.normal li .edit {
+.TodoList li .edit {
   display: none;
 }
 
-.normal li.editing:last-child {
+.TodoList li.editing:last-child {
   margin-bottom: -1px;
 }
 
@@ -138,10 +138,10 @@
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   .toggleAll,
-  .normal li .toggle {
+  .TodoList li .toggle {
     background: none;
   }
-  .normal li .toggle {
+  .TodoList li .toggle {
     height: 40px;
   }
   .toggleAll {
