--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,4 +1,4 @@
-.normal {
+.normalFooter {
   color: #777;
   padding: 10px 15px;
   height: 20px;
@@ -6,7 +6,7 @@
   border-top: 1px solid #e6e6e6;
 }
 
-.normal:before {
+.normalFooter:before {
   content: '';
   position: absolute;
   right: 0;
